@@ -1,4 +1,7 @@
 2010-03-24 Magnus Hagdorn
+ * libglide/glide_velo.F90: refactored chckwvel
+
+2010-03-24 Magnus Hagdorn
  * libglide/glide.F90: use new API
  * libglide/glide_velo.F90: refactor calc_btrc
 
